Convert to google style.